--- a/frame2.html
+++ b/frame2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1 align="center"><u>GRAVITY</u></h1>
-	<h3>Inroduction</h3>
+	<h3>Inroduction to Concept of Gravitation</h3>
 <p>Gravity (from Latin gravitas, meaning 'weight'[1]), or gravitation, is a natural phenomenon by which all things with mass or energy—including planets, stars, galaxies, and even light[2]—are brought toward (or gravitate toward) one another. On Earth, gravity gives weight to physical objects, and the Moon's gravity causes the ocean tides. The gravitational attraction of the original gaseous matter present in the Universe caused it to begin coalescing and forming stars and caused the stars to group together into galaxies, so gravity is responsible for many of the large-scale structures in the Universe. Gravity has an infinite range, although its effects become increasingly weaker as objects get further away. <br>
 Gravity is the weakest of the four fundamental interactions of physics, approximately 1038 times weaker than the strong interaction, 1036 times weaker than the electromagnetic force and 1029 times weaker than the weak interaction. As a consequence, it has no significant influence at the level of subatomic particles.[4] In contrast, it is the dominant interaction at the macroscopic scale, and is the cause of the formation, shape and trajectory (orbit) of astronomical bodies. <br>
 </p>
